--- a/public/index.html
+++ b/public/index.html
@@ -74,21 +74,18 @@
                                     <a href="content/hr/contact-us.html" target="_self"
                                         class="button button_theme button_js action_button"><span
                                             class="button_label">Contact Us</span></a>
-                                    <!-- <a href="content/hr/contact-us.html"
-                                        class="button button_theme button_js action_button" target="_self">
-                                        <i class="fas fa-facebook"></i>
-                                    </a> -->
+                                 
                                 </div>
                                 <div class="ser-icon">
                                     <a href="https://linkedin.com"
                                         style="background-color: #2A71BC; color: #fff; font-size: 20px; margin-top: 10px; "
                                         class="button button_theme button_js action_button "
-                                        target="_self"><span></span><i class="fa fa-brands fa-linkedin"></i>
+                                        target="_self"><i class="fa fa-brands fa-linkedin"></i>
                                     </a>
                                     <a href="https://twitter.com"
                                         style="background-color: #2A71BC; color: #fff; font-size: 20px; margin-top: 10px; margin-right: 0; "
                                         class="button button_theme button_js action_button"
-                                        target="_self"><span></span><i class="fa fa-brands fa-twitter"></i>
+                                        target="_self"><i class="fa fa-brands fa-twitter"></i>
                                     </a>
                                 </div>
                                 <div class="dropdown" style="display: block;">
@@ -355,10 +352,10 @@
                                     </div>
                                 </div>
                                 <center>
-                                    <a class="button button_js"
+                                    <a class="button button_js" style="border-radius: 50px;"
                                         href="https://calendly.com/metanoiahr/metanoia-chat-with-abdullah"><span
                                             class="button_label"
-                                            style="border-radius: 50px; color: #000; border-radius: 50px;">Book a
+                                            style="border-radius: 50px; color: #000; ">Book a
                                             Call</span></a>
                                 </center>
                             </div>
@@ -594,8 +591,8 @@
     </script>
      <script>
         document.addEventListener("DOMContentLoaded", function () {
-            var facebookLink = document.querySelector(".fa-facebook");
-            var instagramLink = document.querySelector(".fa-instagram");
+            var facebookLink = document.querySelector(".fa-linkedin");
+            var instagramLink = document.querySelector(".fa-twitter");
 
             // Function to show/hide Facebook and Instagram links based on screen size
             function toggleSocialLinks() {
