--- a/public/services.html
+++ b/public/services.html
@@ -67,15 +67,15 @@
 
                                 </div>
                                 <div class="ser-icon">
-                                    <a href="https://facebook.com"
+                                    <a href="https://linkedin.com"
                                         style="background-color: #2A71BC; color: #fff; font-size: 20px; margin-top: 10px; "
                                         class="button button_theme button_js action_button "
-                                        target="_self"><span></span><i class="fa fa-brands fa-facebook"></i>
+                                        target="_self"><span></span><i class="fa fa-brands fa-linkedin"></i>
                                     </a>
-                                    <a href="https://instagram.com"
+                                    <a href="https://twitter.com"
                                         style="background-color: #2A71BC; color: #fff; font-size: 20px; margin-top: 10px; margin-right: 0; "
                                         class="button button_theme button_js action_button"
-                                        target="_self"><span></span><i class="fa fa-brands fa-instagram"></i>
+                                        target="_self"><span></span><i class="fa fa-brands fa-twitter"></i>
                                     </a>
                                 </div>
                                 <div class="dropdown" style="display: block;">
@@ -84,12 +84,7 @@
                                     </button>
 
                                     <div class="dropdown-content">
-                                        <ul style="
-                                        background: #000;
-                                        
-                                            margin-left: -40px;
-                                            
-                                        ">
+                                        <ul >
 
                                             <li>
 
@@ -379,8 +374,8 @@
 
     <script>
         document.addEventListener("DOMContentLoaded", function () {
-            var facebookLink = document.querySelector(".fa-facebook");
-            var instagramLink = document.querySelector(".fa-instagram");
+            var facebookLink = document.querySelector(".fa-linkedin");
+            var instagramLink = document.querySelector(".fa-twitter");
 
             // Function to show/hide Facebook and Instagram links based on screen size
             function toggleSocialLinks() {
