KM-1266 links fixed

--- a/public/content/hr/contact-us.html
+++ b/public/content/hr/contact-us.html
@@ -48,10 +48,10 @@
                         <div class="column one">
                             <div class="top_bar_left clearfix">
                                 <div class="logo">
-                                    <a id="logo" href="/public/index.html" title="metanoiaHR"><img
-                                            class="logo logo-main scale-with-grid" src="/public/content/hr/images/hr.png" /><img
-                                            class="logo-sticky scale-with-grid" src="/public/content/hr/images/hr.png" /><img
-                                            class="logo-mobile scale-with-grid" src="/public/content/hr/images/hr.png" />
+                                    <a id="logo" href="index.html" title="metanoiaHR"><img
+                                            class="logo logo-main scale-with-grid" src="content/hr/images/hr.png" /><img
+                                            class="logo-sticky scale-with-grid" src="content/hr/images/hr.png" /><img
+                                            class="logo-mobile scale-with-grid" src="content/hr/images/hr.png" />
                                     </a>
                                 </div>
 
@@ -60,9 +60,9 @@
                             <div class="top_bar_right" style="display: flex; justify-content:space-between;">
                                 <div class="top_bar_right_wrapper"
                                     style="display: flex; justify-content:space-between; margin-right: -10px;">
-                                    <a href="/public/services.html" class="button button_theme button_js action_button"
+                                    <a href="services.html" class="button button_theme button_js action_button"
                                         target="_self"><span class="button_label">Services</span></a>
-                                    <a href="/public/content/hr/contact-us.html"
+                                    <a href="content/hr/contact-us.html"
                                         class="button button_theme button_js action_button" target="_self"><span
                                             class="button_label">Contact Us</span></a>
                                 </div>
@@ -86,11 +86,11 @@
                                         <ul >
                                             <li >
 
-                                                <a href="/public/services.html" target="_self">Services</a>
+                                                <a href="services.html" target="_self">Services</a>
                                             </li>
                                             <li >
 
-                                                <a href="/public/content/hr/contact-us.html" style="margin-top: 10px;"
+                                                <a href="content/hr/contact-us.html" style="margin-top: 10px;"
                                                     target="_self">Contact Us</a>
                                             </li>
                                         </ul>
@@ -168,8 +168,8 @@
                     <div class="foot-content">
                         <div class="textwidget align_right">
                             <div class="image_frame image_item no_link scale-with-grid alignnone no_border">
-                                <div class="image_wrapper"><a href="/public/index.html"><img class="footer-grid"
-                                            src="/public/content/hr/images/hr_footer.png"
+                                <div class="image_wrapper"><a href="index.html"><img class="footer-grid"
+                                            src="content/hr/images/hr_footer.png"
                                             style="width:90; height: 59 ; margin-top: 10px;" /></a>
                                 </div>
                             </div>
