--- a/public/services.html
+++ b/public/services.html
@@ -121,7 +121,7 @@
                                             class="image_frame image_item no_link scale-with-grid alignnone no_border service_img">
                                             <div style="margin-top: 50px;" class="image_wrapper"><img
                                                     class="scale-with-grid"
-                                                    src="images/Strategic-recruiting.webp" /> </div>
+                                                    src="./images/Strategic-recruiting.webp" /> </div>
                                         </div>
                                         <div class="column_attr align_center width">
                                             <hr class="no_line" />
@@ -154,7 +154,7 @@
                                         </div>
                                         <div class="image_frame image_item no_link scale-with-grid alignnone no_border service_img">
                                             <div style="margin-top: 50px;" class="image_wrapper">
-                                                <img class="scale-with-grid" src="images/empowerment-coaching.webp" />
+                                                <img class="scale-with-grid" src="./images/empowerment-coaching.webp" />
                                             </div>
                                         </div>
 
@@ -164,7 +164,7 @@
                                         <div
                                             class="image_frame image_item no_link scale-with-grid alignnone no_border service_img">
                                             <div style="margin-top: 50px;" class="image_wrapper"><img
-                                                    class="scale-with-grid" src="images/job-seeker.webp" />
+                                                    class="scale-with-grid" src="./images/job-seeker.webp" />
                                             </div>
                                         </div>
                                         <div class="column_attr align_center width">
