KM-1268 final corrections

--- a/public/index.html
+++ b/public/index.html
@@ -37,10 +37,10 @@
     <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Lato:300,300italic,400,400italic,700,700italic'>
 
     <!-- CSS -->
-    <link rel='stylesheet' href='css/global.css'>
-    <link rel='stylesheet' href='content/hr/css/structure.css'>
-    <link rel='stylesheet' href='content/hr/css/hr.css'>
-    <link rel='stylesheet' href='css/custom.css'>
+    <link rel='stylesheet' href='./css/global.css'>
+    <link rel='stylesheet' href='./content/hr/css/structure.css'>
+    <link rel='stylesheet' href='./content/hr/css/hr.css'>
+    <link rel='stylesheet' href='./css/custom.css'>
 
     <!-- Revolution Slider -->
 
@@ -66,8 +66,8 @@
 
 
                             </div>
-                            <div class="top_bar_right">
-                                <div class="top_bar_right_wrapper">
+                            <div class="top_bar_right" style="display: flex; justify-content:space-between;">
+                                <div class="top_bar_right_wrapper" style="display: flex; justify-content:space-between;">
                                     <a href="services.html" target="_self"
                                         class="button button_theme button_js action_button"><span
                                             class="button_label">Services</span></a>
@@ -112,6 +112,8 @@
                         </div>
                     </div>
                 </div>
+                </header>
+                
                 <div class="mfn-main-slider" id="mfn-rev-slider">
                     <div class="section mcb-section"
                         style="padding-top:100px; padding-bottom:60px; background-image: url(images/header.webp);  background-position:center top;">
@@ -201,7 +203,7 @@
                                                                             width="100" height="100" /> </div>
                                                                 </div>
                                                                 <hr class="no_line" style="margin: 0 auto 30px;" />
-                                                                <h4><a href="services.html" target="_self">STRATEGIC
+                                                                <h4 style="text-align: center;"><a href="services.html" target="_self">STRATEGIC
                                                                         RECRUITING</a></h4>
                                                                 <hr class="no_line" style="margin: 0 auto 30px;" />
                                                                 <p>
@@ -229,7 +231,7 @@
                                                                             width="100" height="100" /> </div>
                                                                 </div>
                                                                 <hr class="no_line" style="margin: 0 auto 30px;" />
-                                                                <h4><a href="services.html" target="_self">EMPOWERMENT
+                                                                <h4 style="text-align: center;"><a href="services.html" target="_self">EMPOWERMENT
                                                                         COACHING</a></h4>
                                                                 <hr class="no_line" style="margin: 0 auto 30px;" />
                                                                 <p>
@@ -257,7 +259,7 @@
                                                                             width="100" height="100" /> </div>
                                                                 </div>
                                                                 <hr class="no_line" style="margin: 0 auto 30px;" />
-                                                                <h4><a href="services.html" target="_self">JOB SEEKER
+                                                                <h4 style="text-align: center;"><a href="services.html" target="_self">JOB SEEKER
                                                                         SUPPORT</a></h4>
                                                                 <hr class="no_line" style="margin: 0 auto 30px;" />
                                                                 <p>
