KM-1200 profile page

--- a/public/index.html
+++ b/public/index.html
@@ -71,6 +71,9 @@
                                     <a href="services.html" target="_self"
                                         class="button button_theme button_js action_button"><span
                                             class="button_label">Services</span></a>
+                                    <a href="profiles.html" target="_self"
+                                        class="button button_theme button_js action_button"><span
+                                            class="button_label">Profile</span></a>
                                     <a href="content/hr/contact-us.html" target="_self"
                                         class="button button_theme button_js action_button"><span
                                             class="button_label">Contact Us</span></a>
@@ -97,6 +100,10 @@
                                             <li >
 
                                                 <a href="services.html" target="_self">Services</a>
+                                            </li>
+                                            <li >
+
+                                                <a href="profiles.html" target="_self">Profile</a>
                                             </li>
                                             <li >
 
