--- a/public/content/hr/contact-us.html
+++ b/public/content/hr/contact-us.html
@@ -62,6 +62,8 @@
                                     style="display: flex; justify-content:space-between; margin-right: -10px;">
                                     <a href="../../services.html" class="button button_theme button_js action_button"
                                         target="_self"><span class="button_label">Services</span></a>
+                                    <a href="../../profiles.html" class="button button_theme button_js action_button"
+                                        target="_self"><span class="button_label">Profile</span></a>
                                     <a href="./contact-us.html"
                                         class="button button_theme button_js action_button" target="_self"><span
                                             class="button_label">Contact Us</span></a>
@@ -87,6 +89,10 @@
                                             <li >
 
                                                 <a href="services.html" target="_self">Services</a>
+                                            </li>
+                                            <li >
+
+                                                <a href="profiles.html" target="_self">Profile</a>
                                             </li>
                                             <li >
 
