KM-1369 service images

--- a/public/index.html
+++ b/public/index.html
@@ -407,7 +407,7 @@
                             <div>
 
                                 <p class=""> We're your trusted advisors, coaches, and recruitment experts rolled into one. </p>
-                                <p class="">With a keen focus on North American businesses, we're dedsicated to enhancing your operational efficiency and boosting your bottom line.
+                                <p class="">With a keen focus on North American businesses, we're dedicated to enhancing your operational efficiency and boosting your bottom line.
                                 </p>
                             </div>
                             <a href="./inner_pages/page-services.html" class="fsz-14 text-uppercase hover-cyan1">see all services <i
@@ -425,7 +425,7 @@
                                 <h4 class="title"> <a href="#" class="hover-cyan1"> STRATEGIC RECRUITING</a>
                                 </h4>
                                 <div class="img">
-                                    <img src="assets/img/services/1.jpeg" alt="">
+                                    <img src="assets/img/services/strategic _recrulting.webp" alt="">
                                 </div>
                                 <div class="text fsz-16 color-666 mt-40">
                                     We understand the power of having the right talent on your team. Our expert recruitment services identify, attract, and match top-tier candidates to your company's needs.
@@ -439,7 +439,7 @@
                                 </div>
                                 <h4 class="title"> <a href="#" class="hover-cyan1"> EMPOWERMENT COACHING </a> </h4>
                                 <div class="img">
-                                    <img src="assets/img/services/2.jpeg" alt="">
+                                    <img src="assets/img/services/empowerment_coaching.webp" alt="">
                                 </div>
                                 <div class="text fsz-16 color-666 mt-40">
                                     Elevate your team's efficiency and performance through targeted coaching. Our tailored programs are designed to inspire, refine skills, and optimize employee potential.
@@ -453,7 +453,7 @@
                                 </div>
                                 <h4 class="title"> <a href="#" class="hover-cyan1"> JOB SEEKER SUPPORT </a> </h4>
                                 <div class="img">
-                                    <img src="assets/img/services/3.jpeg" alt="">
+                                    <img src="assets/img/services/job_seeker_support.webp" alt="">
                                 </div>
                                    
                                 <div class="text fsz-16 color-666 mt-40"> 
@@ -868,7 +868,7 @@
         <section class="tc-partners-style3">
             <div class="container">
                 <div class="section_title3 text-center">
-                    <h2> 150+ Brands <span class="fw-100"> trust us </span> </h2>
+                    <h2> Brands that trust us </span> </h2>
                     <p class="mt-60"> Each of client is a separate story, work with much brands from small to big, bring
                         our much experiences </p>
                 </div>
@@ -1401,7 +1401,7 @@
                                 <div class="img img-contain">
                                     <img src="assets/img/hr.png" alt="">
                                 </div>
-                                <h2 class="fw-bold text-uppercase ms-3 color-000">
+                                <h2 class="fw-bold  ms-3 color-000">
                                     <span class="fw-bold"> MetanoiaHR
                                          
                                 </h2>
